# refind-forest-theme

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/loader/: refind-forest-sbat.csv
assets/source/: README.md
patches/: refind-0.14.2-gnu-efi-abi.patch
src/refind_forest/: __init__.py  __main__.py  assets.py  build.py  cli.py  config.py  install.py
src/refind_forest/loader/: __init__.py  build.py  cli.py  deploy.py  verify.py
tests/: test_assets.py  test_build.py  test_cli.py  test_config.py  test_install.py  test_loader_build.py  test_loader_cli.py  test_loader_deploy.py  test_loader_verify.py  test_makefile.py  test_package.py  test_publication.py  test_qemu_smoke_script.py
tools/: check_public_tree.py  contact_sheet.py  qemu_refind_smoke.sh
